# python-scripts

./: .gitattributes  .gitignore  .pylintrc  Dockerfile  README.md  buildme.sh  cliapp-cmd.py  codingstd.md  pyproject.toml  requirements.txt  runme.sh  setup.cfg  skelton.py  test.py  venv_pylint.sh  venv_setup.sh
.github/: copilot-instructions.md
.github/workflows/: dependency-check.yml  pylint.yml
.run/: abuseipdb_checker.run.xml  cliapp-cmd.run.xml  cloudskillboost.run.xml  csv2md.run.xml  dns_get_domain_ns.run.xml  github_get_user_keys.run.xml  log-loader.run.xml  rdap_get_domain_details.run.xml  uptimerobot_probe_addresses mikrotik output.run.xml  uptimerobot_probe_addresses plain output.run.xml
cliapp/: __init__.py  cliapp.py  cliparams.py
from_google/: README.md
simple/: .gitignore  README.md  abuseipdb_checker.py  cloudskillboost_profile_reader.py  csv2md.py  csv2xlsx.py  dns_get_domain_ns.py  gcp_api_addresses.py  gcp_get_api_addresses.py  github_get_user_keys.py  input.yaml  log-loader.py  rdap_get_domain_details.py  skelton.py  uptimerobot_get_probe_addresses.py  yaml_tests.py
